Handle URIs as strings instead of links in merge spec